Suppress nested SDK public method calls